CHATS_SIT/force-app/main/default/objects/sfsit_t_sbsd_case_homeless_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_case_homeless_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_case_homeless_hist</externalName>
    <fields>
        <fullName>cde_source_vrfd_adr__c</fullName>
        <description>cde_source_vrfd_adr</description>
        <externalDeveloperName>cde_source_vrfd_adr</externalDeveloperName>
        <label>Code source address verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>cde_type_verif__c</fullName>
        <description>cde_type_verif</description>
        <externalDeveloperName>cde_type_verif</externalDeveloperName>
        <label>Code type verification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_verif__c</fullName>
        <description>dte_verif</description>
        <externalDeveloperName>dte_verif</externalDeveloperName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_homeless__c</fullName>
        <description>idn_sbsd_case_homeless</description>
        <externalDeveloperName>idn_sbsd_case_homeless</externalDeveloperName>
        <label>Homeless ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE_HOMELESS__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE_HOMELESS__c</referenceTo>
        <relationshipLabel>Case Homeless Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_sbsd_case_homeless_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_sbsd_case_homeless_hist__c</fullName>
        <description>idn_sbsd_case_homeless_hist</description>
        <externalDeveloperName>idn_sbsd_case_homeless_hist</externalDeveloperName>
        <label>Homeless ID history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>last modified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_sbsd_case_homeless_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng__c</fullName>
        <description>idn_user_vrfyng</description>
        <externalDeveloperName>idn_user_vrfyng</externalDeveloperName>
        <label>verified by?</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_is_homeless__c</fullName>
        <description>ind_is_homeless</description>
        <externalDeveloperName>ind_is_homeless</externalDeveloperName>
        <label>is homeless?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_family_homeless__c</fullName>
        <description>is_family_homeless</description>
        <externalDeveloperName>is_family_homeless</externalDeveloperName>
        <label>is homeless?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_lvg_campground__c</fullName>
        <description>ind_lvg_campground</description>
        <externalDeveloperName>ind_lvg_campground</externalDeveloperName>
        <label>Living in campground</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_lvg_hotel__c</fullName>
        <description>ind_lvg_hotel</description>
        <externalDeveloperName>ind_lvg_hotel</externalDeveloperName>
        <label>Living in hotel or motel</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_lvg_other__c</fullName>
        <description>ind_lvg_other</description>
        <externalDeveloperName>ind_lvg_other</externalDeveloperName>
        <label>Have a temporary living situation (pleas</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_lvg_shelter__c</fullName>
        <description>ind_lvg_shelter</description>
        <externalDeveloperName>ind_lvg_shelter</externalDeveloperName>
        <label>Living in shelter</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_lvg_substandard__c</fullName>
        <description>ind_lvg_substandard</description>
        <externalDeveloperName>ind_lvg_substandard</externalDeveloperName>
        <label>Living in substandard housing such as ca</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_homeless__c</fullName>
        <description>nbr_seq_homeless</description>
        <externalDeveloperName>nbr_seq_homeless</externalDeveloperName>
        <label>Number Sequence homeless</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_cmt__c</fullName>
        <description>txt_cmt</description>
        <externalDeveloperName>txt_cmt</externalDeveloperName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Case Homeless History</label>
    <pluralLabel>Case Homeless History</pluralLabel>
</CustomObject>